src/components/socials/style.pcss
@import "../../styles/mixins.pcss";

.socials {
  &__list {
    @media (--mobile-above) {
      justify-content: flex-end;
    }

    &.flow {
      --gapX: 16px;
      --gapY: 8px;

      @media (--tablet-s) {
        --gapX: 10px;
      }

      @media (--mobile) {
        --gapX: 8px;
      }
    }
  }
  
  &__link {
    --size: 64px;

    @mixin flex-center;
    @mixin square var(--size);
    @mixin transition 0.05s;

    border-radius: 50%;
    box-shadow: var(--box-shadow-inset-2);

    @media (--tablet-s) {
      --size: 50px;
    }

    @media (--mobile-xxs) {
      --size: 58px;
    }
    
    &::after {
      display: none;
    }
  
    .i-icon {
      --size: 62.5%;
      --color: var(--c-light);
    
      .is-light-theme-enabled & {
        --color: var(--c-dark);
      }
    }
    
    &:hover {
      @media (--hoverable) {
        .i-icon {
          --color: var(--c-accent);
        }
      }
    }
  }
}

